Ajustes no mobile

--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -32,6 +32,8 @@
 
             img {
                 height: 83px;
+                width: 100%;
+                
             }
 
             strong {
