--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -7,6 +7,20 @@
     text-align: center;
     background-size: cover;
     position: relative;
+
+
+    @media(max-width:768px){
+        background-image: url(../images/hero_celular.jpeg);
+        padding-top: calc( 50vw + 25px);
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-top: -55px;
+    }
+
+    .button{
+        margin-top: 2vw;
+        margin-bottom: 8px;
+    }
  
     &__content{
         max-width: 540px;
@@ -15,6 +29,11 @@
             max-width: 320px;
             width: 200px;
             margin: 0 auto 38px;
+
+            @media(max-width:768px){
+                max-width: 180px;
+            }
+        
         }
 
         .title--small{
@@ -32,9 +51,19 @@
                 display: flex;
                 justify-content: space-between;
 
+                @media(max-width:768px){
+                   display: block;
+                
+                }
+
             &__combo{
                 width: calc(50% - 12px);
                 
+                @media(max-width:768px){
+                    width: 100%;
+                    margin-bottom: 24px;
+                 }
+
                 img{
                     max-height: 60px;
                 }
