--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -9,6 +9,10 @@
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
 
+        @media(max-width:768px){
+            grid-template-columns: 1fr 1fr;
+        }
+
         &--is-active{
             display: grid;
         }
@@ -23,6 +27,13 @@
     &__tabs{
         display: flex;
         justify-content: center;
+
+        @media(max-width:768px){
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+          }
+
         &__button{
             color: variaveis.$corTextoSecundario;
             font-size: 20px;
@@ -33,9 +44,16 @@
             margin: 0 1vw;
             cursor: pointer;
             border-bottom: 5px solid transparent;
+
+
             &--is-active{
                 border-color: variaveis.$corTextoSecundario;
             }
+
+            @media(max-width:768px){
+                font-size: 16px;
+              }
+            
         }
     }
 }
