--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,8 @@
 @use 'plans';
 @use'available_devices';
 @use 'faq';
+@use 'footer';
+@use 'header';
 
 @font-face{
     font-family: Avenir;
@@ -41,14 +43,29 @@ body{
 }
 .text--big{
     @include text(18px);
+
+    @media(max-width:768px){
+        @include text(15px);
+    }
+
 }
 
 .text{
     @include text;
+
+    @media(max-width:768px){
+        @include text(14px);
+    }
+
 }
 
 .text--small{
     @include text(12px);
+
+    @media(max-width:768px){
+        @include text(11px);
+    }
+
 }
 
 .link-text{
@@ -59,29 +76,70 @@ body{
 
 .title--big{
     @include title(44px);
+
+    @media(max-width:768px){
+        @include title(26px);
+    }
 }
 
 .title{
     @include title;
+
+    @media(max-width:768px){
+        @include title(24px);
+    }
+
 }
 
 .title--small{
-    @include title(22px);
+    @include title(28px);
+
+    @media(max-width:768px){
+        @include title(22px);
+    }
+
 }
 
 .button{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     color: variaveis.$corTextoSecundario;
-    background-color: #6421ff;
+    background-color: variaveis.$corDeFundoBotaoPrimario;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
-    border: none;
     cursor: pointer;
+    text-decoration: none;
+    padding: 8px 14px;
+    letter-spacing: 1px;
+    border: 1px solid variaveis.$corDeFundoBotaoPrimario;
+
+    &:hover{
+        background-color: lighten(variaveis.$corDeFundoBotaoPrimario, 3%);
+    }
+
+    &--secondary{
+        background-color: variaveis.$corDeFundoBotaoSecundario;
+        border-color: variaveis.$corDeFundoBotaoSecundario;
+
+
+        &:hover{
+            background-color: lighten(variaveis.$corDeFundoBotaoSecundario, 3%);
+        }
+    }
+
+    &--dark{
+        background-color: rgba(variaveis.$corDeFundoBotaoDark,0.8);
+        border-color: variaveis.$corTextoSecundario;
+
+        &:hover{
+            background-color: variaveis.$corTextoSecundario;
+            color: variaveis.$corDeFundo;
+        }
+    }
 }
 
 .image-text-section{
@@ -90,9 +148,16 @@ body{
     grid-template-columns: 1fr 1fr;
     align-items: center;
     
+    @media(max-width:768px){
+        display: block;
+    }
 
     img{
         max-width: 100%;
+
+        @media(max-width:768px){
+            margin-bottom: 16px;
+        }
     }
 
     &__text_container{
@@ -120,6 +185,13 @@ body{
             flex-direction: column;
             justify-content: center;
           
+            @media(max-width:768px){
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
+        
+
         }
     }
 }
